--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   firebase_core: ^2.2.0
   cloud_firestore: ^4.0.5
 
+  #State Management
+  flutter_riverpod: ^2.1.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
